Add sidebar and icons in users template

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,3 +1,6 @@
+* 
+    font-family: 'Roboto'
+    
 .page
     background-color: #edf3f3
 .navbar
@@ -95,6 +98,26 @@
     &__desc
         height: 130px
         line-height: 130px
+    &__lower-section
+        background: #eeeeee
+        padding: 5px 0
 
-
+    &__likes::after
+        content: '❤️'
+        margin-left: 6px
+    &__visits::after
+        content: '🕵️‍♂️'
+        margin-left: 6px
         
+    
+
+
+.right-sidebar
+    padding: 30px 20px
+    margin-top: 30px
+    position: sticky
+    top: 30px
+    
+    &__header
+        font-size: 22px
+        font-weight: bold
