--- a/views/users/userList.pug
+++ b/views/users/userList.pug
@@ -16,8 +16,11 @@ block main
                                 img.card__background(src='/img/card-bg.jpg', alt='')
                                 a.card__username(href='/users/' + username)=user.username
                                 .card__desc Lorem ipsum dolor sit amet.
-                                .row
-                                    .card__likes.col-xs-6 5 
-                                    .card__visits.col-xs-6 10                            
+                                .container-fluid
+                                    .row
+                                        .card__likes.card__lower-section.col-xs-6 5
+                                        .card__visits.card__lower-section.col-xs-6 10                            
+            .card.card-large.right-sidebar.col-xs-12.col-md-5 
+                #right-sidebar__header.right-sidebar__header Willy Wonka
+                #right-sidebar__info.right-sidebar__info Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ad error nisi nobis debitis quam assumenda blanditiis incidunt dolores in, dolor sapiente fugiat laborum tempora earum eum cumque corporis optio accusamus ut maxime. Aut modi labore sapiente eius, veritatis rerum accusantium ipsam odit, cumque, corporis praesentium quaerat facere dignissimos. Assumenda dolores et perferendis atque, totam, dolor culpa magnam nulla similique molestias placeat, aspernatur nostrum quae! Provident, eos! Fuga iure omnis consectetur eum, vitae dolore dolores quis maxime molestias et nulla tempore quasi explicabo nesciunt quam impedit, ad libero temporibus sunt rem incidunt. Quis quia dolorum sapiente. Officiis sed dolorum saepe neque! Impedit provident corrupti cumque voluptas delectus nulla modi, ullam labore sapiente ab recusandae, iste numquam, inventore dolorum. Cupiditate voluptate magni officia explicabo quis assumenda repellat quo optio ipsam nam consequatur, sunt odit dignissimos labore cum asperiores quaerat ducimus molestiae vero sint et? Aliquid, aspernatur? A quo natus minima commodi!
 
-            .right-sidebar.col-xs-12.col-md-5
