Add pointer cursor to user card

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -80,6 +80,7 @@
         height: 200px
         object-fit: cover
     &__username
+        cursor: pointer
         position: absolute
         font-size: 20px
         color: #fff
@@ -109,8 +110,6 @@
         content: '🕵️‍♂️'
         margin-left: 6px
         
-    
-
 
 .right-sidebar
     padding: 30px 20px
