--- a/views/users/userList.pug
+++ b/views/users/userList.pug
@@ -14,7 +14,7 @@ block main
                         .col-xs-12.col-md-6
                             .card-list__card.card
                                 img.card__background(src='/img/card-bg.jpg', alt='')
-                                a.card__username(href='/users/' + username)=user.username
+                                .card__username=user.username
                                 .card__desc Lorem ipsum dolor sit amet.
                                 .container-fluid
                                     .row
