Update paddings in users view

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -99,12 +99,13 @@
     &__desc
         height: 130px
         display: table
-        
+        padding: 7px
+        line-height: 130px
     &__desc-text
         position: relative
         vertical-align: middle
         display: table-cell
-
+        
     &__lower-section
         background: #eeeeee
         padding: 5px 0
