--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -100,6 +100,8 @@
             text-decoration: none
     &__desc
         height: 130px
+        padding: 7px
+        line-height: 130px
         display: table
         padding: 7px
         line-height: 130px
