--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap')
+    
 * 
     font-family: 'Roboto'
     
@@ -127,3 +129,36 @@
     &__header
         font-size: 22px
         font-weight: bold
+
+.error-page
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    text-align: center
+    font-weight: bold
+    &__oops
+        font-size: 230px
+        font-family: 'Montserrat'
+        background-image: url('/img/background.jpg')
+        -webkit-background-clip: text
+        -webkit-text-fill-color: transparent
+        background-size: cover
+    &__message
+        font-size: 23px
+        text-transform: uppercase
+        font-family: 'Montserrat'
+    &__home-btn
+        margin-top: 25px
+    
+    
+.btn 
+    background-color: #0046d5
+    font-family: 'Montserrat'
+    border-radius: 15px
+    display: inline-block
+    padding: 10px 15px
+    color: #ffffff
+    text-transform: uppercase
+    box-shadow: 0px 4px 15px -5px #0046d5
+    text-decoration: none
