--- a/views/base.pug
+++ b/views/base.pug
@@ -10,7 +10,11 @@ html
         block links
     body.page
         - const navbarElements = [{caption: 'Users', link:'/users/'}, {caption: 'Articles', link:'/articles/'}]
-      
+        - if (!user) {
+        -   navbarElements.push({caption: 'Login', link: '/login/'});            
+        -} else {
+        -   navbarElements.push({caption: `You ${user.username}`, link: `/users/${user.username}`})    
+        -}
         header.navbar.page__navbar.clearfix
             h1.navbar__logo.logo
                 | N-Blog
