Revert "Fix duplicate css rules"
This reverts commit 3a26a79988c353cc408ec7dde38cb05e19e78269.

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -100,8 +100,11 @@
             text-decoration: none
     &__desc
         height: 130px
+        padding: 7px
+        line-height: 130px
         display: table
         padding: 7px
+        line-height: 130px
     &__desc-text
         position: relative
         vertical-align: middle
