--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -161,3 +161,27 @@
     text-transform: uppercase
     box-shadow: 0px 4px 15px -5px #0046d5
     text-decoration: none
+
+
+.card-login 
+    margin: 50px auto 0 auto 
+    width: 300px
+    padding: 15px 15px 30px 15px
+
+    &__input:not(:last-child)
+        margin-bottom: 15px
+
+    &__caption
+        font-weight: bold
+        font-size: 22px
+        margin-bottom: 20px
+
+    &__input_btn
+        padding: 3px 25px
+        border: none
+        background-color: #eeeeee
+        color: #000000
+        transition: all 0.15s ease
+        &:hover
+            background-color: #639fff
+            color: #ffffff
