--- a/views/base.pug
+++ b/views/base.pug
@@ -13,7 +13,7 @@ html
         - if (!user) {
         -   navbarElements.push({caption: 'Login', link: '/login/'});            
         -} else {
-        -   navbarElements.push({caption: `You ${user.username}`, link: `/users/${user.username}`})    
+        -   navbarElements.push({caption: `Logout`, link: `/login/logout`})    
         -}
         header.navbar.page__navbar.clearfix
             h1.navbar__logo.logo
